完成仪表盘的注册页面布局

--- a/app/src/main/res/layout/fragment_register_customer.xml
+++ b/app/src/main/res/layout/fragment_register_customer.xml
@@ -1,274 +1,277 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/ic_customer_register_background">
-
-    <include layout="@layout/item_title" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="44dp"
-        android:text="商家注册"
-        style="@style/text_333_18"
-        />
-
+    >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="47dp"
+        android:background="@drawable/ic_background"
         android:orientation="vertical"
-        android:layout_marginLeft="18dp"
-        android:layout_marginRight="18dp">
+        android:paddingLeft="38dp"
+        android:paddingRight="88dp"
+        android:paddingTop="17dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="邀请码"
                 android:layout_weight="1"
-                style="@style/text_515151_12"
-                />
-            <EditText
+                android:text="邀请码" />
+
+            <cn.cnlinfo.ccf.view.CleanEditText
                 android:id="@+id/et_invitation_code"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/edit_text_style"
                 android:layout_weight="3"
-                android:hint="88888"
+                android:background="@drawable/edit_text_style"
                 android:gravity="center"
-                style="@style/text_515151_12"
-                />
+                android:hint="16位字母数字组合"
+                android:inputType="text"
+                android:maxLength="16"
+                android:maxLines="1"
+                android:textColor="@drawable/selector_edittext_text_color" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            >
+            android:layout_marginTop="9dp">
+
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="用户名"
                 android:layout_weight="1"
-                style="@style/text_515151_12"
-                />
-            <EditText
-                android:id="@+id/et_username"
+                android:text="用户名" />
+
+            <cn.cnlinfo.ccf.view.CleanEditText
+                android:id="@+id/et_user_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/edit_text_style"
                 android:layout_weight="3"
-                style="@style/text_515151_12"
-                />
+                android:background="@drawable/edit_text_style"
+                android:digits="@string/input_impose_num_lower_case"
+                android:gravity="center"
+                android:inputType="textPersonName"
+                android:maxLength="11"
+                android:maxLines="1"
+                android:textColor="@drawable/selector_edittext_text_color" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp">
+            android:layout_marginTop="9dp">
+
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="分享用户"
                 android:layout_weight="1"
-                style="@style/text_515151_12"
-                />
-            <EditText
+                android:text="分享用户" />
+
+            <cn.cnlinfo.ccf.view.CleanEditText
                 android:id="@+id/et_share_user"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/edit_text_style"
                 android:layout_weight="3"
-                android:hint="推荐人"
+                android:background="@drawable/edit_text_style"
                 android:gravity="center"
-                style="@style/text_515151_12"
-                />
+                android:hint="推荐人"
+                android:maxLength="11"
+                android:maxLines="1"
+                android:textColor="@drawable/selector_edittext_text_color" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp">
+            android:layout_marginTop="9dp">
+
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="服务用户"
                 android:layout_weight="1"
-                style="@style/text_515151_12"
-                />
-            <EditText
+                android:text="服务用户" />
+
+            <cn.cnlinfo.ccf.view.CleanEditText
                 android:id="@+id/et_service_user"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/edit_text_style"
                 android:layout_weight="3"
-                style="@style/text_515151_12"
+                android:background="@drawable/edit_text_style"
                 android:gravity="center"
                 android:hint="接点人"
-                />
+                android:maxLength="11"
+                android:maxLines="1" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp">
+
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="代理服务"
                 android:layout_weight="1"
-                style="@style/text_515151_12"
-                />
+                android:text="代理服务" />
+
             <EditText
                 android:id="@+id/et_agency_service"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/edit_text_style"
                 android:layout_weight="3"
+                android:background="@drawable/edit_text_style"
                 android:gravity="center"
                 android:hint="区服务人员"
-                style="@style/text_515151_12"
-                />
+                android:maxLength="11"
+                android:maxLines="1" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp">
+            android:layout_marginTop="9dp">
+
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="代理类型"
                 android:layout_weight="1"
-                style="@style/text_515151_12"
-                />
-            <EditText
+                android:text="代理类型" />
+
+            <cn.cnlinfo.ccf.view.CleanEditText
                 android:id="@+id/et_agency_type"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/edit_text_style"
                 android:layout_weight="3"
-                style="@style/text_515151_12"
-                android:hint="省代、市代、区县代"
+                android:background="@drawable/edit_text_style"
                 android:gravity="center"
-                />
+                android:hint="省代、市代、区县代"
+                android:maxLength="11"
+                android:maxLines="1" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp">
+            android:layout_marginTop="9dp">
 
             <TextView
-                style="@style/text_515151_12"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="登录密码" />
 
-            <EditText
+            <cn.cnlinfo.ccf.view.CleanEditText
                 android:id="@+id/et_login_pass"
-                style="@style/text_515151_12"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:background="@drawable/edit_text_style"
-                android:text="数字+字母"
                 android:gravity="center"
-
-                />
+                android:hint="数字+字母"
+                android:maxLength="11"
+                android:maxLines="1" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp">
+            android:layout_marginTop="9dp">
+
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="确认密码"
                 android:layout_weight="1"
-                style="@style/text_515151_12"
-                />
+                android:text="确认密码" />
+
             <EditText
                 android:id="@+id/et_affirm_pass"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/edit_text_style"
                 android:layout_weight="3"
-                style="@style/text_515151_12"
+                android:background="@drawable/edit_text_style"
                 android:gravity="center"
-                android:text="数字+字母"
-                />
+                android:hint="数字+字母"
+                android:maxLength="11"
+                android:maxLines="1" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp">
+            android:layout_marginTop="9dp">
+
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="手机号"
                 android:layout_weight="1"
-                style="@style/text_515151_12"
-                />
-            <EditText
+                android:text="手机号" />
+
+            <cn.cnlinfo.ccf.view.CleanEditText
                 android:id="@+id/et_phone_num"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/edit_text_style"
                 android:layout_weight="3"
-                android:inputType="phone"
+                android:background="@drawable/edit_text_style"
                 android:gravity="center"
-                android:text="11位手机号"
-                style="@style/text_515151_12"
-                />
+                android:hint="11位手机号"
+                android:inputType="phone"
+                android:maxLength="11"
+                android:maxLines="1" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp">
+            android:layout_marginTop="9dp">
+
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="验证码"
+                android:layout_gravity="center"
                 android:layout_weight="1"
-                style="@style/text_515151_12"
-                />
+                android:text="验证码" />
+
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3">
 
-                <EditText
+                <cn.cnlinfo.ccf.view.CleanEditText
                     android:id="@+id/et_verification_code"
                     android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@drawable/edit_text_style" />
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:inputType="number"
+                    android:maxLength="4"
+                    android:maxLines="1"
+                    android:background="@drawable/edit_text_style"
+                    android:textColor="@drawable/selector_edittext_text_color" />
 
-                <TextView
-                    android:id="@+id/tv_get_verification_code"
+                <Button
+                    android:id="@+id/btn_get_verification_code"
                     android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="16dp"
-                    android:layout_weight="0.5"
-                    android:background="@drawable/button_verification_style"
-                    android:gravity="center"
-                    android:text="获取验证码"
-                    style="@style/text_f5543a_12"
-                    android:onClick="gainVerificationCode"
-                    />
+                    android:layout_height="22dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="18dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/selector_button_bg"
+                    android:text="获取" />
             </LinearLayout>
         </LinearLayout>
+
         <Button
             android:id="@+id/btn_register_customer"
-            android:layout_width="wrap_content"
-            android:layout_height="39dp"
-            android:text="注册"
-            android:background="@drawable/button_register_style"
+            android:layout_width="69dp"
+            android:layout_height="22dp"
             android:layout_gravity="center"
-            android:layout_marginTop="58dp"
-            style="@style/text_ffffff_12"
-            />
+            android:layout_marginTop="18dp"
+            android:background="@drawable/selector_button_bg"
+            android:text="注册" />
     </LinearLayout>
-</LinearLayout>
+</ScrollView>
