--- a/app/src/main/res/layout/fragment_gauge_panel.xml
+++ b/app/src/main/res/layout/fragment_gauge_panel.xml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center">
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="@string/gauage_panel"
-    />
+    android:orientation="vertical">
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="225dp"
+        android:background="@drawable/ic_global"/>
+            <GridView
+                android:id="@+id/gv_gauge_panel"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:numColumns="4"
+                android:stretchMode="columnWidth"
+                android:verticalSpacing="0dp"
+                android:background="@drawable/ic_background"
+                android:layout_marginBottom="9dp">
+            </GridView>
+
 </LinearLayout>
