完成仪表盘中的成员注册中的省市县选择,操作数据库工具类DatabaseUtils

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="color_transparent">#00000000</color>
 
 
-
+    <color name="color_gray_eae8db">#eae8db</color>
     <color name="color_white_ffffff_alpha_60">#99FFFFFF</color>
     <color name="color_white_ffffff_alpha_40">#66FFFFFF</color>
     <color name="color_white_faf9f9">#faf9f9</color>
