--- a/app/src/main/res/layout/fragment_register_agency.xml
+++ b/app/src/main/res/layout/fragment_register_agency.xml
@@ -10,7 +10,7 @@
         android:orientation="vertical"
         android:paddingBottom="17dp"
         android:paddingLeft="38dp"
-        android:paddingRight="88dp"
+        android:paddingRight="48dp"
         android:paddingTop="17dp">
 
         <LinearLayout
@@ -122,7 +122,7 @@
                 android:layout_weight="1"
                 android:text="代理服务" />
 
-            <EditText
+            <cn.cnlinfo.ccf.view.CleanEditText
                 android:id="@+id/et_agency_service"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -133,7 +133,23 @@
                 android:maxLength="11"
                 android:maxLines="1" />
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="9dp">
 
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="服务类型" />
+
+            <Spinner
+                android:id="@+id/sp_service_type"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3" />
+        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -145,16 +161,11 @@
                 android:layout_weight="1"
                 android:text="代理类型" />
 
-            <EditText
-                android:id="@+id/et_agency_type"
+            <Spinner
+                android:id="@+id/sp_agency_type"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:background="@drawable/edit_text_style"
-                android:gravity="center"
-                android:hint="省代/市代/区县代"
-                android:maxLength="11"
-                android:maxLines="1" />
+                android:layout_weight="3" />
         </LinearLayout>
 
         <LinearLayout
@@ -167,16 +178,17 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="选择地区" />
-
-            <EditText
-                android:id="@+id/et_agency_region"
+            <TextView
+                android:id="@+id/tv_agency_address"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="24dp"
                 android:layout_weight="3"
-                android:background="@drawable/edit_text_style"
+                android:background="@drawable/selector_button_bg"
+                android:drawableRight="@drawable/icon_order_in"
+                android:hint="@string/spinner_tip"
                 android:gravity="center"
-                android:maxLength="11"
-                android:maxLines="1" />
+                style="@style/text_0e1214_15"
+                />
         </LinearLayout>
 
         <LinearLayout
