--- a/app/src/main/res/layout/fragment_register_customer.xml
+++ b/app/src/main/res/layout/fragment_register_customer.xml
@@ -10,7 +10,7 @@
         android:background="@drawable/ic_background"
         android:orientation="vertical"
         android:paddingLeft="38dp"
-        android:paddingRight="88dp"
+        android:paddingRight="48dp"
         android:paddingTop="17dp">
 
         <LinearLayout
@@ -120,7 +120,7 @@
                 android:layout_weight="1"
                 android:text="代理服务" />
 
-            <EditText
+            <cn.cnlinfo.ccf.view.CleanEditText
                 android:id="@+id/et_agency_service"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -141,20 +141,38 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="代理类型" />
+                android:text="用户类型" />
 
-            <cn.cnlinfo.ccf.view.CleanEditText
-                android:id="@+id/et_agency_type"
+            <Spinner
+                android:id="@+id/sp_customer_type"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:background="@drawable/edit_text_style"
-                android:gravity="center"
-                android:hint="省代、市代、区县代"
-                android:maxLength="11"
-                android:maxLines="1" />
+                android:layout_weight="3" />
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="9dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="商家地址" />
+
+            <TextView
+                android:id="@+id/tv_customer_address"
+                android:layout_width="0dp"
+                android:layout_height="24dp"
+                android:layout_weight="3"
+                android:background="@drawable/selector_button_bg"
+                android:drawableRight="@drawable/icon_order_in"
+                android:hint="@string/spinner_tip"
+                android:gravity="center"
+                style="@style/text_0e1214_15"
+                />
+        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
