--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -109,5 +109,6 @@
         <item name="android:divider">@color/color_green_81ced3</item>
         <item name="android:dividerHeight">1dp</item>
         <item name="android:listSelector">@drawable/selector_btn_forget_pass</item>
+        <item name="android:textColor">@color/color_black_0d0d0d</item>
     </style>
 </resources>
