--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -6,10 +6,7 @@
     android:orientation="vertical"
     tools:context="cn.cnlinfo.ccf.activity.ForgetPasswordActivity">
 <!--    <include layout="@layout/item_title"/>-->
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="225dp"
-        android:background="@drawable/ic_global"/>
+    <include layout="@layout/item_image"/>
     <com.shizhefei.view.indicator.FixedIndicatorView
         android:id="@+id/fixedIndicator"
         android:layout_width="match_parent"
