完成跑步排名，加入平台参数和个人参数界面，加入刷新操作,mvchelper和PtrClassicFrameLayout、recycleview

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -45,6 +45,7 @@
     <color name="color_gray_3e4143">#3E4143</color>
     <color name="color_gray_5c5d5d">#5C5D5D</color>
     <color name="color_gray_666666">#666666</color>
+    <color name="color_blue_17375E">#17375E</color>
 
 
 
