--- a/app/src/main/res/layout/fragment_gauge_panel.xml
+++ b/app/src/main/res/layout/fragment_gauge_panel.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <include layout="@layout/item_image"/>
-            <GridView
-                android:id="@+id/gv_gauge_panel"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:numColumns="4"
-                android:stretchMode="columnWidth"
-                android:verticalSpacing="0dp"
-                android:background="@drawable/ic_background"
-                android:layout_marginBottom="9dp">
-            </GridView>
-
-</LinearLayout>
+        <GridView
+            android:id="@+id/gv_gauge_panel"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:numColumns="4"
+            android:stretchMode="columnWidth"
+            android:verticalSpacing="0dp"
+            android:background="@drawable/ic_background"
+            android:layout_marginBottom="9dp">
+             </GridView>
+    </LinearLayout>
