--- a/app/src/main/res/layout/item_title.xml
+++ b/app/src/main/res/layout/item_title.xml
@@ -29,7 +29,7 @@
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:background="@null"
-            android:src="@drawable/icon_add"
+            android:src="@drawable/icon_trangle_transparent_gray"
             android:layout_gravity="end|center"
             />
 </FrameLayout>
