--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -11,12 +11,15 @@
 
     </cn.cnlinfo.ccf.view.StopScrollViewPager>
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="39dp"
+        android:layout_gravity="bottom"
+        android:background="@color/color_white_ffffff">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
+        android:layout_height="match_parent"
         android:weightSum="5">
-
         <TextView
             android:id="@+id/tv_main_page"
             android:layout_width="0dp"
@@ -63,6 +66,7 @@
             android:text="@string/cc_union" />
 
 
-    </LinearLayout>
+        </LinearLayout>
+    </FrameLayout>
 
 </FrameLayout>
