--- a/app/src/main/res/layout/item_fragment_three.xml
+++ b/app/src/main/res/layout/item_fragment_three.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/ic_background">
+    android:layout_marginBottom="18dp"
+    android:background="@drawable/icon_main_page_background">
 
 
     <LinearLayout
