--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="cn.cnlinfo.ccf.activity.ForgetPasswordActivity">
-<!--    <include layout="@layout/item_title"/>-->
+    <include layout="@layout/item_title"/>
     <include layout="@layout/item_image"/>
     <com.shizhefei.view.indicator.FixedIndicatorView
         android:id="@+id/fixedIndicator"
