--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -1,38 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@drawable/icon_background"
-    android:orientation="vertical">
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    tools:context="cn.cnlinfo.ccf.activity.ResetPasswordActivity">
+    <include layout="@layout/item_title_no_right"/>
+    <include layout="@layout/item_image"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingLeft="38dp"
-        android:paddingRight="48dp"
+        android:paddingLeft="9dp"
+        android:paddingRight="9dp"
         android:paddingTop="32dp"
         android:paddingBottom="17dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="18dp">
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="问题一" />
+                android:text="设置登录密码" />
 
-            <Spinner
-                android:id="@+id/sp_one"
+            <cn.cnlinfo.ccf.view.CleanEditText
+                android:id="@+id/ct_set_login_pass"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="3" />
+                android:layout_weight="3"
+                android:background="@drawable/edit_text_style"
+                android:gravity="center"
+                android:inputType="text"
+                android:maxLength="11"
+                android:maxLines="1"
+                android:textColor="@drawable/selector_edit_text_color" />
         </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -43,10 +51,10 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="答案" />
+                android:text="确认登录密码" />
 
             <cn.cnlinfo.ccf.view.CleanEditText
-                android:id="@+id/ct_answer_one"
+                android:id="@+id/ct_verify_login_pass"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
@@ -67,30 +75,10 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="问题二"
-
-                />
-
-            <Spinner
-                android:id="@+id/sp_two"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="18dp">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="答案" />
+                android:text="设置安全密码" />
 
             <cn.cnlinfo.ccf.view.CleanEditText
-                android:id="@+id/ct_answer_two"
+                android:id="@+id/ct_set_safe_pass"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
@@ -111,28 +99,10 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="问题三" />
-
-            <Spinner
-                android:id="@+id/sp_three"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="18dp">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="答案" />
+                android:text="确认安全密码" />
 
             <cn.cnlinfo.ccf.view.CleanEditText
-                android:id="@+id/ct_answer_three"
+                android:id="@+id/ct_verify_safe_pass"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
@@ -152,6 +122,4 @@
             android:layout_marginTop="18dp"
             android:text="确认"/>
     </LinearLayout>
-    </ScrollView>
 </LinearLayout>
-
