--- a/app/src/main/res/layout/activity_contribution_map.xml
+++ b/app/src/main/res/layout/activity_contribution_map.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     tools:context="cn.cnlinfo.ccf.activity.ContributionMapActivity">
 
+    <include layout="@layout/item_title_no_right"/>
     <include layout="@layout/item_image"/>
     <LinearLayout
         android:layout_width="match_parent"
