--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/icon_background"
     tools:context=".activity.RegisterActivity">
+    <include layout="@layout/item_title"/>
     <include layout="@layout/item_image"/>
-
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingTop="17dp"
         android:paddingLeft="38dp"
         android:paddingRight="88dp"
-        android:orientation="vertical"
-        android:background="@drawable/ic_background">
+        android:paddingBottom="17dp"
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
@@ -188,11 +192,11 @@
         <Button
             android:id="@+id/btn_register_user"
             android:layout_width="69dp"
-            android:layout_height="22dp"
+            android:layout_height="32dp"
             android:layout_gravity="center"
             android:background="@drawable/selector_button_bg"
             android:layout_marginTop="18dp"
             android:text="注册"/>
     </LinearLayout>
-
+</ScrollView>
 </LinearLayout>
