--- a/app/src/main/res/layout/activity_set_encrypted.xml
+++ b/app/src/main/res/layout/activity_set_encrypted.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@drawable/icon_background"
-    android:orientation="vertical">
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    tools:context="cn.cnlinfo.ccf.activity.SetEncryptedActivity">
+    <include layout="@layout/item_title_no_right"/>
+    <include layout="@layout/item_image"/>
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -150,8 +153,7 @@
             android:layout_gravity="center"
             android:background="@drawable/selector_button_bg"
             android:layout_marginTop="18dp"
-            android:text="确认"/>
+            android:text="设置"/>
     </LinearLayout>
-    </ScrollView>
+</ScrollView>
 </LinearLayout>
-
