--- a/app/src/main/res/layout/activity_update_password.xml
+++ b/app/src/main/res/layout/activity_update_password.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@drawable/icon_background"
-    android:orientation="vertical">
-
+    tools:context="cn.cnlinfo.ccf.activity.UpdatePasswordActivity">
+    <include layout="@layout/item_title_no_right"/>
+    <include layout="@layout/item_image"/>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -12,41 +15,71 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:paddingBottom="17dp"
         android:paddingLeft="38dp"
-        android:paddingRight="48dp"
-        android:paddingTop="32dp"
-        android:paddingBottom="17dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="问题一" />
-
-            <Spinner
-                android:id="@+id/sp_one"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3" />
-        </LinearLayout>
+        android:paddingRight="28dp"
+        android:paddingTop="17dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="18dp">
+            android:layout_marginTop="9dp">
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="答案" />
+                android:text="登录密码" />
 
             <cn.cnlinfo.ccf.view.CleanEditText
-                android:id="@+id/ct_answer_one"
+                android:id="@+id/et_login_pass"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:background="@drawable/edit_text_style"
+                android:gravity="center"
+                android:hint="11位字母数字组合"
+                android:inputType="text"
+                android:maxLength="11"
+                android:maxLines="1"
+                android:textColor="@drawable/selector_edit_text_color" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="9dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="新登录密码" />
+
+            <cn.cnlinfo.ccf.view.CleanEditText
+                android:id="@+id/et_new_login_pass"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:background="@drawable/edit_text_style"
+                android:gravity="center"
+                android:inputType="text"
+                android:maxLength="11"
+                android:maxLines="1"
+                android:textColor="@drawable/selector_edit_text_color" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="9dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="确认密码" />
+
+            <cn.cnlinfo.ccf.view.CleanEditText
+                android:id="@+id/et_verify_login_pass"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
@@ -58,39 +91,44 @@
                 android:textColor="@drawable/selector_edit_text_color" />
         </LinearLayout>
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="18dp">
+            android:layout_marginTop="9dp">
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="问题二"
-
-                />
-
-            <Spinner
-                android:id="@+id/sp_two"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="18dp">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="答案" />
+                android:text="安全密码" />
 
             <cn.cnlinfo.ccf.view.CleanEditText
-                android:id="@+id/ct_answer_two"
+                android:id="@+id/et_safe_pass"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:background="@drawable/edit_text_style"
+                android:gravity="center"
+                android:hint="11位字母数字组合"
+                android:inputType="text"
+                android:maxLength="11"
+                android:maxLines="1"
+                android:textColor="@drawable/selector_edit_text_color" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="9dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="新安全密码" />
+
+            <cn.cnlinfo.ccf.view.CleanEditText
+                android:id="@+id/et_new_safe_pass"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
@@ -101,38 +139,19 @@
                 android:maxLines="1"
                 android:textColor="@drawable/selector_edit_text_color" />
         </LinearLayout>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="18dp">
+            android:layout_marginTop="9dp">
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="问题三" />
-
-            <Spinner
-                android:id="@+id/sp_three"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="18dp">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="答案" />
+                android:text="确认密码" />
 
             <cn.cnlinfo.ccf.view.CleanEditText
-                android:id="@+id/ct_answer_three"
+                android:id="@+id/et_verify_safe_pass"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
@@ -142,16 +161,15 @@
                 android:maxLength="11"
                 android:maxLines="1"
                 android:textColor="@drawable/selector_edit_text_color" />
-        </LinearLayout>
+            </LinearLayout>
         <Button
-            android:id="@+id/btn_ok"
+            android:id="@+id/btn_affirm_update"
             android:layout_width="69dp"
             android:layout_height="32dp"
             android:layout_gravity="center"
-            android:background="@drawable/selector_button_bg"
             android:layout_marginTop="18dp"
-            android:text="确认"/>
-    </LinearLayout>
+            android:background="@drawable/selector_button_bg"
+            android:text="确认修改" />
+        </LinearLayout>
     </ScrollView>
 </LinearLayout>
-
