--- a/app/src/main/res/layout/activity_user_parameter.xml
+++ b/app/src/main/res/layout/activity_user_parameter.xml
@@ -3,7 +3,9 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/icon_background"
     >
+    <include layout="@layout/item_title_no_right"/>
     <include layout="@layout/item_image"/>
 
 <ScrollView
@@ -12,8 +14,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-       android:background="@drawable/ic_background">
+        android:orientation="vertical">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="30dp"
@@ -68,7 +69,7 @@
                         style="@style/text_0e1214_15" />
 
                     <TextView
-                        android:id="@+id/tv_cp"
+                        android:id="@+id/tv_cycle_package"
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/height"
 
@@ -89,11 +90,10 @@
                         style="@style/text_0e1214_15"/>
 
                     <TextView
-                        android:id="@+id/tv_tba_ccf"
+                        android:id="@+id/tv_wait_alive_ccf"
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/height"
-
-                        android:textSize="@dimen/textsize_two_level" />
+                        style="@style/text_0e1214_15"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -109,11 +109,10 @@
                          />
 
                     <TextView
-                        android:id="@+id/tv_ccv"
+                        android:id="@+id/tv_cc_volume"
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/height"
-
-                        android:textSize="@dimen/textsize_two_level" />
+                        style="@style/text_0e1214_15" />
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -131,7 +130,7 @@
                         android:id="@+id/tv_bonus_points"
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/height"
-                        android:textSize="@dimen/textsize_two_level" />
+                        style="@style/text_0e1214_15" />
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -146,10 +145,10 @@
                         style="@style/text_0e1214_15" />
 
                     <TextView
-                        android:id="@+id/tv_ccp"
+                        android:id="@+id/tv_cc_points"
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/height"
-                        android:textSize="@dimen/textsize_two_level" />
+                        style="@style/text_0e1214_15" />
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -167,7 +166,7 @@
                         android:id="@+id/tv_tbr_ccr_points"
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/height"
-                        android:textSize="@dimen/textsize_two_level" />
+                        style="@style/text_0e1214_15"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -182,10 +181,10 @@
                         style="@style/text_0e1214_15"/>
 
                     <TextView
-                        android:id="@+id/tv_tb_rs_points"
+                        android:id="@+id/tv_wait_release_points"
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/height"
-                        android:textSize="@dimen/textsize_two_level" />
+                        style="@style/text_0e1214_15" />
                 </LinearLayout>
 
 
@@ -210,11 +209,10 @@
                         style="@style/text_0e1214_15"/>
 
                     <TextView
-                        android:id="@+id/tv_yesterday_c"
+                        android:id="@+id/tv_yesterday_contribute_value"
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/height"
-
-                        android:textSize="@dimen/textsize_two_level" />
+                        style="@style/text_0e1214_15"/>
                 </LinearLayout>
 
 
@@ -231,11 +229,10 @@
                         style="@style/text_0e1214_15" />
 
                     <TextView
-                        android:id="@+id/tv_c_contribution_v"
+                        android:id="@+id/tv_current_contribution_value"
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/height"
-
-                        android:textSize="@dimen/textsize_two_level" />
+                        style="@style/text_0e1214_15"  />
                 </LinearLayout>
 
                 <LinearLayout
@@ -251,11 +248,10 @@
                         style="@style/text_0e1214_15" />
 
                     <TextView
-                        android:id="@+id/tv_b_contribution_r"
+                        android:id="@+id/tv_basic_contribution_rate"
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/height"
-
-                        android:textSize="@dimen/textsize_two_level" />
+                        style="@style/text_0e1214_15" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -271,10 +267,10 @@
                         style="@style/text_0e1214_15" />
 
                     <TextView
-                        android:id="@+id/tv_as"
+                        android:id="@+id/tv_total_step"
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/height"
-                        android:textSize="@dimen/textsize_two_level" />
+                        style="@style/text_0e1214_15" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -290,10 +286,10 @@
                         style="@style/text_0e1214_15"/>
 
                     <TextView
-                        android:id="@+id/tv_today_s"
+                        android:id="@+id/tv_today_step"
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/height"
-                        android:textSize="@dimen/textsize_two_level" />
+                        style="@style/text_0e1214_15"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -309,10 +305,10 @@
                         style="@style/text_0e1214_15" />
 
                     <TextView
-                        android:id="@+id/tv_f_ccf"
+                        android:id="@+id/tv_freeze_ccf"
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/height"
-                        android:textSize="@dimen/textsize_two_level" />
+                        style="@style/text_0e1214_15" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -328,10 +324,10 @@
                         style="@style/text_0e1214_15" />
 
                     <TextView
-                        android:id="@+id/tv_tat_amount"
+                        android:id="@+id/tv_wait_alive_limit"
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/height"
-                        android:textSize="@dimen/textsize_two_level" />
+                        style="@style/text_0e1214_15"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -347,10 +343,10 @@
                         style="@style/text_0e1214_15" />
 
                     <TextView
-                        android:id="@+id/tv_a_difficulty_f"
+                        android:id="@+id/tv_average_difficulty_coefficient"
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/height"
-                        android:textSize="@dimen/textsize_two_level" />
+                        style="@style/text_0e1214_15"/>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
