--- a/app/src/main/res/layout/fragment_call_back_by_phone_num.xml
+++ b/app/src/main/res/layout/fragment_call_back_by_phone_num.xml
@@ -2,18 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/ic_background"
+    android:background="@drawable/icon_background"
     android:orientation="vertical">
-  <!--  <ImageView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="225dp"
-        android:background="@drawable/ic_global"/>-->
+        android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="32dp"
         android:paddingLeft="38dp"
         android:paddingRight="48dp"
+        android:paddingBottom="17dp"
         android:orientation="vertical"
        >
         <LinearLayout
@@ -154,11 +154,12 @@
         <Button
             android:id="@+id/btn_ok"
             android:layout_width="69dp"
-            android:layout_height="22dp"
+            android:layout_height="32dp"
             android:layout_gravity="center"
             android:background="@drawable/selector_button_bg"
             android:layout_marginTop="18dp"
             android:text="确认"/>
          </LinearLayout>
+    </ScrollView>
     </LinearLayout>
 
